--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
